<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#202124">

        <ImageView
            android:id="@+id/skipPrevious"
            android:layout_width = "wrap_content"
            android:layout_height = "100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/skipPrevious"
            app:srcCompat="@drawable/baseline_skip_previous_24" />

        <ImageView
            android:id="@+id/Play"
            android:layout_width = "wrap_content"
            android:layout_height = "100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/Play"
            app:srcCompat="@drawable/play_arrow_black_24dp" />

        <ImageView
            android:id="@+id/skipNext"
            android:layout_width = "wrap_content"
            android:layout_height = "100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/skipNext"
            app:srcCompat="@drawable/baseline_skip_next_24" />

</LinearLayout>
